<resources>
    <string name="app_name">MyFinTech</string>

    //Day's short keyword
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">SA</string>
    <string name="sunday">S</string>

    <string name="sans_serif" translatable="false">sans-serif</string>

</resources>
