<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvType"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Tuy chinh" />

        <TextView
            android:id="@+id/tvNameType"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_weight="1"
            android:gravity="center"
            android:text="ngay" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:orientation="horizontal"
        android:weightSum="7">

        <Button
            android:id="@+id/button5"
            android:layout_width="@dimen/dp90"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/sunday"
            android:textColor="@color/green"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/dp90"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/monday"
            android:textColor="@color/green"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="@dimen/dp90"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/tuesday"
            android:textColor="@color/green"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="@dimen/dp90"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/wednesday"
            android:textColor="@color/green"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="@dimen/dp90"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/thursday"
            android:textColor="@color/green"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="@dimen/dp90"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/friday"
            android:textColor="@color/green"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="@dimen/dp90"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/saturday"
            android:textColor="@color/green"
            android:textSize="16sp" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvCalendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>